[package]
name = "acron"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "acron"
path = "src/main.rs"

[dependencies]
# chrono::Local reads the device timezone (persist.sys.timezone) via
# iana-time-zone, so schedules honor wall-clock local time like real cron.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
